# smart-heaven

./: .env.example  .gitignore  README.md  docker-compose.mdocotion.yaml  docker-compose.yaml  mkdocs.yml  requirements.txt  server.js
apps/api/: .dockerignore  Dockerfile  eslint.config.mjs  package-lock.json  package.json  tsconfig.eslint.json  tsconfig.json
apps/api/prisma/: seed.ts
apps/api/src/: app.module.ts  main.ts
apps/embedded/legacy/bridge/: .gitignore  Cargo.toml
apps/embedded/legacy/bridge/.cargo/: config.toml
apps/embedded/legacy/bridge/src/: buzzer.rs  config.rs  encoder.rs  hil_tests.rs  lights.rs  main.rs  mock.rs  sensors.rs  servo_barrier.rs  shift_register.rs  state_machine.rs  stepper.rs  tasks.rs  tests.rs  traits.rs
apps/embedded/legacy/bridge/src/hardware_test/: barriers.rs  buzzer.rs  distance_sensors.rs  lights.rs  load_cell.rs  mod.rs  obstacle_sensor.rs  reed_sensor.rs  stepper.rs
apps/embedded/smart_city_v2/: README.md  platformio.ini
apps/smartcity-api/: README.md  docker-compose.yml  dockerfile  package.json
apps/smartcity-api/prisma/: schema.prisma
apps/web/: .gitignore  Dockerfile  Dockerfile.dev  angular.json  package.json
docs/: .pages  ERD.mmd  README-api-architecture.md  README-mdocotion.md  README-web-architecture.md  contributing.md  index.md  rust-presentation.md  vision.md
docs/build-standards/: .pages  electronics-standard.md  embedded-components.md  index.md  software-standard.md  tile-standard.md
docs/features/: .pages  _template.md  busstop_advice.md  busstop_design.md  busstop_research.md  design.md  index.md  railway-barrier.md  sens.md  traffic-light2.md  traffic-lights.md
docs/layout/: .pages  districts.md  index.md  tile-map.md
docs/logs/: .pages  index.md  issues-risks.md
docs/process/: .pages  definition-of-done.md  definition-of-ready.md  index.md  roadmap.md
docs/systems/: .pages  dashboard.md  database-cheatsheat.md  database-design.md  database-realise.md  database-research.md  databse-advice.md  embedded-firmware.md  index.md  iot-network.md
(+172 files in other folders)
